# mudtracker

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
libraries/: CMakeLists.txt
libraries/ProgramOptions/: CMakeLists.txt  LICENSE
libraries/SFML2/: sfml2-config.cmake
libraries/portaudio/: CMakeLists.txt
libraries/portmidi/: CMakeLists.txt
libraries/simpleini/: CMakeLists.txt
libraries/tinyfiledialogs/: CMakeLists.txt
libraries/whereami/: CMakeLists.txt
resources/: manual.adoc  manual.html  manual.md  readme.txt
resources/instruments/: defaultMelodic.mdti  defaultPercussion.mdti
resources/instruments/bass/: acousticbass.mdti  fingeredbass.mdti  hardsynthbass.mdti  pickedbass.mdti  slapbass.mdti  slapbass2.mdti  synthbass.mdti  synthbass2.mdti
resources/instruments/brass/: altosax.mdti  baritonesax.mdti  brass.mdti  horn.mdti  mutedtrumpet.mdti  sopranosax.mdti  tenorsax.mdti  trombone.mdti  trumpet.mdti  tuba.mdti
resources/instruments/effects/: belltree.mdti  birdie.mdti  graouwr.mdti  helicopter.mdti  helicopter2.mdti  scratch_pull.mdti  scratch_push.mdti  seashore.mdti  telephone.mdti  zapper.mdti
resources/instruments/guitar/: distguitar.mdti  guitarharmonics.mdti  jazzguitar.mdti  mutedguitar.mdti  nylonguitar.mdti  steelguitar.mdti
resources/instruments/keyboards/: clavi.mdti  drawbarorgan.mdti  elecpiano1.mdti  elecpiano2.mdti  harpsi.mdti  honkytonk.mdti  organ_flute.mdti  percorgan.mdti  piano.mdti  piano2.mdti  piano3.mdti  pipeorgan.mdti  rockorgan.mdti
resources/instruments/melodic percussion/: bell.mdti  celeste.mdti  dulcimer.mdti  glockenspiel.mdti  kalimba.mdti  marimba.mdti  melodictom.mdti  musicbox.mdti  space_marimba.mdti  steeldrum.mdti  timpani.mdti  vibraphone.mdti  xylophone.mdti
resources/instruments/percussion/: agogo_high.mdti  agogo_low.mdti  bassdrum.mdti  beep.mdti  castanets.mdti  clap.mdti  clave.mdti  closedhh.mdti  cowbell.mdti  crashcymbal.mdti  cymbalswell.mdti  elecbassdrum.mdti  elecsnare.mdti  hibongo.mdti  hiconga.mdti  highfloortom.mdti  highmidtom.mdti  hightimbale.mdti  hightom.mdti  highwoodblock.mdti  jinglebell.mdti  longguiro.mdti  longwhistle.mdti  lowbongo.mdti  lowconga.mdti  lowfloortom.mdti  lowmidtom.mdti  lowtimbale.mdti  lowtom.mdti  maracas.mdti  metronome_bell.mdti  metronome_click.mdti  muteconga.mdti  mutedsurdo.mdti  mutedtriangle.mdti  openhh.mdti  opentriangle.mdti  orchcymbal.mdti  pedalhh.mdti  ride.mdti  (+11 more)
resources/instruments/strings/: banjo.mdti  cello.mdti  harp.mdti  koto.mdti  orchhit.mdti  pizz.mdti  shamisen.mdti  sitar.mdti  slowstrings.mdti  strings.mdti  strings_attack.mdti  tremstrings.mdti  violin.mdti
resources/instruments/synth/: bowedpad.mdti  chiff.mdti  choirpad.mdti  crystal.mdti  fantasia.mdti  fifth_saw.mdti  halopad.mdti  icerain.mdti  metallicpad.mdti  myaaw.mdti  polysynth.mdti  pure_saw.mdti  pure_sine.mdti  pure_square.mdti  saw.mdti  softsynstrings.mdti  soundtrack.mdti  square.mdti  sweeppad.mdti  synbrass.mdti  synlead.mdti  synstrings.mdti  synvoice.mdti  warmpad.mdti
resources/instruments/woodwinds/: accordion.mdti  bagpipe.mdti  bassoon.mdti  bottleblow.mdti  breathy_flute.mdti  calliope.mdti  choir_aahs.mdti  choir_oohs.mdti  clarinet.mdti  englishhorn.mdti  flute.mdti  harmonica.mdti  oboe.mdti  ocarina.mdti  panflute.mdti  piccolo.mdti  recorder.mdti  shakuhachi.mdti  synthvoice.mdti  whistle.mdti
resources/songs/: AnotherThing.mdts  pluiedefevrier.mdts  sandtracking.mdts
src/: globalFunctions.cpp  globalFunctions.hpp  main.cpp  mudtracker.desktop  mudtracker.rc
src/gui/: channelHead.cpp  drawBatcher.cpp  gui.cpp  gui.hpp  mainmenu.cpp  sidebar.cpp
src/gui/button/: button.cpp  buttonlist.cpp
src/gui/checkbox/: checkbox.cpp
src/gui/contextmenu/: contextmenu.cpp
src/gui/list/: list.cpp
src/gui/operator/: operator.cpp  operatorparams.cpp
src/gui/popup/: popup.cpp  popup.hpp  popup_build.cpp  popup_close.cpp  popup_effectInfos.cpp
src/gui/scrollbar/: scrollbar.cpp
src/gui/slider/: dataslider.cpp
src/gui/textfield/: textfield.cpp
src/gui/vumeter/: stereovumeter.cpp  vumeter.cpp
src/input/: input.cpp  noteInput.cpp  noteInput.hpp
src/midi/: midi.h  midi_export.cpp  midi_import.cpp  midi_realtime.cpp
src/mtengine/: README.md  mtlib.c  mtlib.h
src/streamed/: streamedExport.cpp  streamedExport.h
src/views/general/: generalEditor.cpp  generalEditor.hpp
src/views/instrument/: instrEditor.cpp  instrEditor.hpp  (+2 more)
(+19 files in other folders)
